Fix .TabLayout .Tabs jumping (#6843)

--- a/src/renderer/components/layout/tab-layout.scss
+++ b/src/renderer/components/layout/tab-layout.scss
@@ -11,7 +11,8 @@
 
   > .Tabs {
     background: var(--layoutTabsBackground);
-    min-height: 36px;
+    flex-shrink: 0;
+    height: 34px;
   }
 
   main {
